@@ -95,15 +95,33 @@ bobmods.lib.tech.replace_prerequisite('bob-shotgun-shells', 'zinc-processing', '
 bobmods.lib.tech.add_prerequisite('oil-gas-extraction', 'fluid-handling')
 
 -- Move recipes that shouldn't be unlocked at startup
-bobmods.lib.tech.add_recipe_unlock('geode-crystallization-1', 'bob-ruby-3')
-bobmods.lib.tech.add_recipe_unlock('geode-crystallization-1', 'bob-sapphire-3')
-bobmods.lib.tech.add_recipe_unlock('geode-crystallization-1', 'bob-emerald-3')
-bobmods.lib.tech.add_recipe_unlock('geode-crystallization-1', 'bob-amethyst-3')
-bobmods.lib.tech.add_recipe_unlock('geode-crystallization-1', 'bob-topaz-3')
-bobmods.lib.tech.add_recipe_unlock('geode-crystallization-1', 'bob-diamond-3')
-bobmods.lib.recipe.enabled('bob-ruby-3', false)
-bobmods.lib.recipe.enabled('bob-sapphire-3', false)
-bobmods.lib.recipe.enabled('bob-emerald-3', false)
-bobmods.lib.recipe.enabled('bob-amethyst-3', false)
-bobmods.lib.recipe.enabled('bob-topaz-3', false)
-bobmods.lib.recipe.enabled('bob-diamond-3', false)
+local function MoveStartupRecipes(recipes, technology)
+  for _,v in pairs(recipes) do
+    bobmods.lib.tech.add_recipe_unlock(technology, v)
+    bobmods.lib.recipe.enabled(v, false)
+  end
+end
+
+MoveStartupRecipes(
+  {
+    'bob-ruby-3',
+    'bob-sapphire-3',
+    'bob-emerald-3',
+    'bob-amethyst-3',
+    'bob-topaz-3',
+    'bob-diamond-3'
+  },
+  'geode-crystallization-1'
+)
+MoveStartupRecipes(
+  {
+    'alien-artifact-red-from-small',
+    'alien-artifact-yellow-from-small',
+    'alien-artifact-orange-from-small',
+    'alien-artifact-blue-from-small',
+    'alien-artifact-purple-from-small',
+    'alien-artifact-green-from-small',
+    'alien-artifact-from-small'
+  },
+  'bio-processing-alien-3'
+)
