@@ -10,6 +10,7 @@ Date: ???
     - Bob's assembling machines mod setting Fluid burning furnaces defaults to false
     - Renamed Brass and Bronze processing techs. Tidied up prerequisites
     - Raw gem recipes unlocked by Geode crystallization 1
+    - Alien artifact recipes unlocked by Alien bio processing 3
   Bugfixes:
     - Fixed crash in tutorial when SCT was not enabled
     - Cellulose Pulp was not usable as intermediate when hand crafting
